--- a/LabWebAppBlazor/Components/Pages/CuentasPorCobrar.razor
+++ b/LabWebAppBlazor/Components/Pages/CuentasPorCobrar.razor
@@ -10,7 +10,11 @@
 @inject NavigationManager Navigation
 @inject IJSRuntime JS
 
-<h3>Cuentas por Cobrar</h3>
+<h4 class="mb-4 d-flex align-items-center">
+    <i class="fas fa-file-invoice-dollar text-primary fs-4 me-2"></i>
+    Cuentas por Cobrar
+</h4>
+
 
 <div class="row mb-3">
     <div class="col-md-3">
